# modx

./: .config.example.yml  .config.yml  .env.example  .gitignore  .keys  .models.example.json  .models.json  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
modx/: __init__.py  __main__.py  constants.py  containers.py  context.py  exceptions.py
modx/_cli/: __init__.py  exceptions.py
modx/_cli/commands/: __init__.py  run.py
modx/_cli/helpers/: args.py
modx/cache/: __init__.py  redis.py
modx/chatbot/: __init__.py  openai.py
modx/chatbot/tools/: __init__.py  datetime.py  weather.py
modx/chatbot/types/: __init__.py  completion.py  completion_chunk.py  message.py  stream.py  usage.py
modx/cli/: __init__.py  exceptions.py
modx/cli/cmd/: __init__.py  run.py
modx/cli/commands/: __init__.py  run.py
modx/cli/helpers/: args.py
modx/client/: http.py
modx/config/: __init__.py  chatbot.py  http_client.py  logging.py  prometheus.py  server.py
modx/config/cache/: __init__.py  redis.py
modx/config/middleware/: __init__.py  auth.py  cors.py  gzip.py  logging.py  security.py  trace.py
modx/helpers/: display.py  mixin.py  slotted.py  sse.py
modx/http/: __init__.py  exc_handler.py  life.py  lifespan.py
modx/http/middlewares/: auth.py  (+5 more)
modx/interface/: __init__.py  auth.py  compat.py
modx/logger/: __init__.py  loguru.py  native.py  types.py
modx/resources/: __init__.py  api_key.py
modx/service/: __init__.py  auth.py  compat.py
modx/utils/: __init__.py  ansi.py  hash.py
modx/value_obj/: __init__.py  chat_completion.py  security.py  time.py
(+6 files in other folders)
